force-app/main/default/objects/RTV_Summary_Sku_Budget__c/RTV_Summary_Sku_Budget__c.object-meta.xml
<CustomObject>
    <label>RTV Summary Sku Budget</label>
    <nameField>
        <label>RTV Summary Sku Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV Summary Sku Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>