force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>AccountGroup__c</fullName>
    <label>AccountGroup</label>
    <length>20</length>
    <type>Text</type>
</CustomField>