force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/BudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetAmount__c</fullName>
    <label>BudgetAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>