force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/FinanceCode__c.field-meta.xml
<CustomField>
    <fullName>FinanceCode__c</fullName>
    <label>FinanceCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>