force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/MaterialCode__c.field-meta.xml
<CustomField>
    <fullName>MaterialCode__c</fullName>
    <label>MaterialCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>