force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/ProgramName__c.field-meta.xml
<CustomField>
    <fullName>ProgramName__c</fullName>
    <label>ProgramName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>