force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/SalesChannel__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel__c</fullName>
    <label>SalesChannel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>