force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <label>StoreCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>