force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/SummaryName__c.field-meta.xml
<CustomField>
    <fullName>SummaryName__c</fullName>
    <label>SummaryName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>