force-app/main/default/objects/RTV_Summary_Sku_Budget__c/fields/SummaryStatus__c.field-meta.xml
<CustomField>
    <fullName>SummaryStatus__c</fullName>
    <label>SummaryStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>